fix(sidebar): collapse on wider screen

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -214,7 +214,7 @@
     padding-left: 1rem;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1024px) {
     .app {
       display: grid;
       grid-template-columns: minmax(var(--bl-sidebar-width), max-content) 1fr;
